# SHORTEST_PATH

./: Makefile  README.md  compose.yaml
src/: fang.env
src/db/: Dockerfile  README.md  configure-db.sh  setup.sql
src/server/: Dockerfile  pyproject.toml
src/server/server/: driver.py  logging_conf.yaml  main.py  routing.py  schema.py  settings.py
src/server/server/resources/: InputData.csv
